Correções e adições pequenas
# usar âncoras para qdo usuário cadastra presença na interface da semana (aluno/cardapio/) ele volta ao dia em que estava

--- a/aluno/cartao_dia.html
+++ b/aluno/cartao_dia.html
@@ -9,6 +9,7 @@
         <ul class="cardapio__lista">
           {{itens}}
         </ul>
+        {{sem_alimentos}}
       </div>
     </div>
   </div>
