--- a/entrar/main.html
+++ b/entrar/main.html
@@ -81,5 +81,6 @@
 
 <div class="entrar__sobre-container">
     <!-- stuff -->
+    <a class="entrar__sobre-container--link" href="{root_path}faq/" style="right: 4.5rem;">FAQ</a>
     <a class="entrar__sobre-container--link" href="{root_path}sobre/">Sobre</a>
 </div>
