--- a/sobre/index.html
+++ b/sobre/index.html
@@ -141,7 +141,7 @@
                     </div>
                     <div class="equipe__conteudo--verso">
                       <div class="equipe__conteudo--funcao">
-                        Administrador de Banco de Dados
+                        Administradora de Banco de Dados
                       </div>
                       <div class="equipe__conteudo--nome">
                         Laira
@@ -220,9 +220,10 @@
                       </div>
                       <div class="equipe__conteudo--social">
                         <ul class="equipe__conteudo--lista">
-                          <li class="equipe__conteudo--item"><a href="" target="_blank"><i class="socicon-github"></i></a></li>
-                          <li class="equipe__conteudo--item"><i class="socicon-instagram"></i></li>
-                          <li class="equipe__conteudo--item"><i class="socicon-whatsapp"></i></li>
+                          <li class="equipe__conteudo--item"><a href="https://github.com/mateuxlucax" target="_blank"><i class="socicon-github"></i></a></li>
+                          <li class="equipe__conteudo--item"><a href="https://www.linkedin.com/in/mateus-lucas-cruz-brandt-2b81a7174/" target="_blank"><i class="socicon-linkedin"></i></a>
+                          <li class="equipe__conteudo--item"><a href="mailto:mateusslucass840@gmail.com" target="_blank"><i class="socicon-mail"></i></a>
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -283,45 +284,13 @@
       </div>
     </div>
 
-    <div class="row container">
-      <div class="col s12">
-        <div class="sobre__container">
-
-          <div class="col s12">
-            <h4 class="sobre__container--titulo almocai-text text-amarelo">FAQ</h4>
-          </div>
-          
-          <div class="col s12">
-            <ul class="collapsible">
-              <li>
-                <div class="collapsible-header"><i class="material-icons">add</i>Como faço meu cadastro?</div>
-                <div class="collapsible-body"><div class="faq__container">É necessário conversar com a nutricionista para que ela realize o cadastro, utilizando sua matrícula com uma senha padrão, visto que o sistema é de uso limitado aos matriculados na instituição.</div></div>
-              </li>
-              <li>
-                <div class="collapsible-header"><i class="material-icons">add</i>Como faço a confirmação de almoço?</div>
-                <div class="collapsible-body"><div class="faq__container">Após logar no site, o usuário já pode ver um quadro de confirmação na página inicial e dizer se vai almoçar no dia ou não. O sistema automaticamente considera que o usuário irá almoçar na instituição, não havendo necessidade de confirmação. Porém, caso ele não vá almoçar, deverá modificar a opção no sistema, tendo um prazo disponível até às 10 horas da manhã.</div></div>
-              </li>
-              <li>
-                <div class="collapsible-header"><i class="material-icons">add</i>Como altero minha senha?</div>
-                <div class="collapsible-body"><div class="faq__container">Após realizar o login, no canto superior direito terá a opção “perfil”, clicando lá, você terá acesso ao campo de alteração de senha, sendo necessário inserir a nova e antiga senha, respectivamente, após isso clique em “alterar”.</div></div>
-              </li>
-              <li>
-                <div class="collapsible-header"><i class="material-icons">add</i>Como seleciono o meu tipo de alimentação?</div>
-                <div class="collapsible-body"><div class="faq__container">O perfil do estudante é configurado com especificações padrões, porém caso o usuário tiver algum tipo de restrição, tal como intolerâncias, veganismo ou vegetarianismo deverá ser informado nos campos correspondentes. Lembre-se de que se você tiver algum tipo de alergia, é necessário enviar a receita prescrita pelo médico digitalizada.</div></div>
-              </li>
-            </ul>
-
-          </div>
-        </div>
-      </div>
-    </div>
-
   </main>
   
   <footer class="page-footer">
     <div class="footer-copyright">
       <div class="container">
       © 2019 Almoçaí
+      <a href="../faq/" class="right">FAQ</a>
       </div>
     </div>
   </footer>
