Enviar email alterado
Alterado o modelo de email à ser enviado para recuperação de senha, e adicionado try catch

--- a/administrador/componentes/adicionar_usuario.html
+++ b/administrador/componentes/adicionar_usuario.html
@@ -13,7 +13,7 @@
           <label for="nome">Nome completo</label>
         </div>        
 
-        <div class="input-field col s12 m8">
+        <div class="input-field col s12 m8 ">
           <input id="username" type="text" name="username" maxlength="100" required placeholder="Ex: fulano.silva" />
           <label for="username">Nome de usuário</label>
           <span class="helper-text" data-error="Username já em uso" data-success=""></span>
@@ -24,7 +24,7 @@
           <label for="senha">Senha</label>
         </div>
         
-        <div class="col s12 m6 l2 center">          
+        <div class="col s12 center">          
           <button class="waves-effect waves-light btn adm__inserir--btn almocai {cor_btn} bold"
           type="submit" name="acao" value="Insert" id="adicionar">
             Adicionar</button>
