--- a/entrar/recuperacao/main.html
+++ b/entrar/recuperacao/main.html
@@ -32,7 +32,7 @@
 					</div>
 				</div>
 			</form>
-			<p>Se você não informou o seu email em seu perfil ao acessar o sistema, entre em contato com "jesus cristo".</p>
+			<p>Se você não informou o seu email em seu perfil ao acessar o sistema, entre em contato com Coordenação Geral de Ensino.</p>
 
 		</div>
 	</div>
