--- a/entrar/recuperacao/msg_email_invalido.html
+++ b/entrar/recuperacao/msg_email_invalido.html
@@ -2,7 +2,7 @@
 	<div class="col s12 m6 offset-m3">
 		<div class="card-panel almocai vermelho almocai-text text-branco">
 			<p style="font-size: 1.25rem;">
-				O email inserido é invalido. Verifique seu email e tente novamente! 
+				{errorMessage}
 			</p>
 			<p class="right-align">
 				<a href="../" class="perfil__dismiss bold">OK</a>
