--- a/aluno/cartao_presenca.html
+++ b/aluno/cartao_presenca.html
@@ -6,7 +6,7 @@
 	<div class=" col s12 l8 offset-l2">
 		<div class="card-panel hoverable {fundo_cor}">
 			<form class="row" action="acao.php" method="post">
-				<h4 class="confirmacao-aluno__titulo">Você irá almoçar no IFC hoje?</h4>
+				<h4 class="confirmacao-aluno__titulo almocai-text text-{cor}"> Você irá almoçar no IFC hoje?</h4>
 				<h6 class="confirmacao-aluno__data">{data_hoje}</h6>
 				<div class="col s6 center">
 					<button type="submit" name="acao" id="acao" value="PresencaSim" {disabled}
