--- a/sobre/index.html
+++ b/sobre/index.html
@@ -189,7 +189,7 @@
                     </div>
                     <div class="equipe__conteudo--verso">
                       <div class="equipe__conteudo--funcao">
-                        Stakeholder
+                        Engenheira de Software
                       </div>
                       <div class="equipe__conteudo--nome">
                         Martina
