--- a/entrar/redefinir-senha/modelo-mensagem.html
+++ b/entrar/redefinir-senha/modelo-mensagem.html
@@ -9,7 +9,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <link rel="apple-touch-icon" sizes="256x256" href="https://fabricadetecnologias.ifc-riodosul.edu.br/almocai/assets/img/icons/icon-192x192.png">
     <link rel="shortcut icon" href="https://fabricadetecnologias.ifc-riodosul.edu.br/almocai/assets/img/icons/icon-192x192.png" />
-    <title>Recuperação de senha - Almoçaí</title>
+    <title>Redefinir senha - Almoçaí</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet" />
     <style type="text/css">
       .ExternalClass {width: 100%;}
@@ -114,17 +114,17 @@
     </xml>
     <![endif]-->
   </head>
-  <body style="margin:0; padding:0; background-color: #F8F8F8;" bgcolor="#F8F8F8">
+  <body style="margin:0; padding:0; background-color: #d6d6d6;" bgcolor="#d6d6d6">
     <!--[if mso]>
     <style type="text/css">
     body, table, td {font-family: Arial, Helvetica, sans-serif !important;}
     </style>
     <![endif]-->
     <!-- START EMAIL -->
-    <table width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#F8F8F8">
+    <table width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#d6d6d6">
       <div class="Gmail" style="height: 1px !important; margin-top: -1px !important; max-width: 600px !important; min-width: 600px !important; width: 600px !important;"></div>
       <div style="display: none; max-height: 0px; overflow: hidden;">
-        Paste your preview text here***
+        Utilize o link abaixo para redefinir sua senha!
       </div>
       <!-- Insert &zwnj;&nbsp; hack after hidden preview text -->
       <div style="display: none; max-height: 0px; overflow: hidden;">
@@ -140,7 +140,7 @@
                 <table cellpadding="0" cellspacing="0" border="0">
                   <tr>
                     <td width="100%" valign="top" align="center">
-                      <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="wrapper" bgcolor="#F8F8F8">
+                      <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="wrapper" bgcolor="#d6d6d6">
                         <tr>
                           <td align="center">
                             <table width="600" cellpadding="0" cellspacing="0" border="0" class="container" align="center">
@@ -175,18 +175,57 @@
                             <table width="600" cellpadding="0" cellspacing="0" border="0" class="container">
                               <!-- START BODY COPY -->
                               <tr>
-                                <td class="td-padding" align="left" style="font-family: 'Open Sans', sans-serif; color: #1d1d2c!important; font-size: 24px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px;">
-                                    {subject}
-                                  </td>
-                                </tr>
+                                <td class="td-padding" align="center" style="font-family: 'Open Sans', sans-serif; color: #1d1d2c!important; font-size: 24px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px;">
+                                      Almoçaí
+                                </td>
+                              </tr>
+                              <tr>
+                                <td class="td-padding" align="center" style="font-family: 'Open Sans', sans-serif; color: #1d1d2c!important; font-size: 18px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px;">
+                                      Redefinir senha
+                                </td>
+                              </tr>
                               <tr>
                                 <td class="td-padding" align="left" style="font-family: 'Open Sans', sans-serif; color: #1d1d2c!important; font-size: 16px; line-height: 24px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 18px;">
-                                  {message}
+                                  Olá, você requisitou recentemente para alterar sua senha. Clique no botão abaixo para redefini-la.
                                 </td>
                               </tr>
                               <tr>
                                 <td class="td-padding" align="left" style="font-family: 'Open Sans', sans-serif; color: #1d1d2c!important; font-size: 16px; line-height: 24px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 18px;">
                                   
+                                </td>
+                              </tr>
+                              <!-- BUTTON -->
+                              <tr style="text-align: center;" align="center">
+                                <td bgcolor="#FAFAFA" align="center" style="padding: 18px 18px 18px 18px; mso-alt-padding: 18px 18px 18px 18px!important;">
+                                  <center>
+                                    <table border="0" cellspacing="0" cellpadding="0">
+                                      <tr>
+                                        <td>
+                                          <table border="0" cellspacing="0" cellpadding="0">
+                                            <tr>
+                                              <td align="left" style="border-radius: 3px;" bgcolor="#438945">
+                                                <a class="button raised" href="{link}" target="_blank" style="font-size: 14px; line-height: 14px; font-weight: 500; font-family: Helvetica, Arial, sans-serif; color: #fafafa; text-decoration: none; border-radius: 3px; padding: 10px 25px; border: 1px solid #438945; display: inline-block; font-weight: bold;">REDEFINIR SUA SENHA</a>
+                                              </td>
+                                            </tr>
+                                          </table>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </center>
+                                </td>
+                              </tr>
+                              <!-- END BUTTON -->
+                              <tr>
+                                <td class="td-padding" align="left" style="font-family: 'Open Sans', sans-serif; color: #1d1d2c!important; font-size: 16px; line-height: 24px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 18px;">
+                                  Caso não tenha solicitado para redefinir sua senha, ignore este email. Ou responda este email para que possamos nos informar. 
+                                </td>
+                              </tr>
+                              <tr>
+                                <td class="td-padding" align="left" style="font-family: 'Open Sans', sans-serif; color: #1d1d2c!important; font-size: 12px; line-height: 24px; padding-top: 16px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 24px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 18px;">
+                                  <hr style="margin-bottom: 20px;">
+                                  Se você está tendo problema ao clicar no botão para redefinir sua senha, copie e cole a URL abaixo em seu navegador.
+                                  <br/>
+                                  <a href="{link}">{link}</a>
                                 </td>
                               </tr>
                               <!-- END BODY COPY -->
@@ -224,7 +263,7 @@
           <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="wrapper">
             <tr>
               <td width="100%" valign="top" align="center">
-                <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="wrapper" bgcolor="#F8F8F8">
+                <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="wrapper" bgcolor="#d6d6d6">
                   <tr>
                     <td align="center">
                       <table width="600" cellpadding="0" cellspacing="0" border="0" class="container">
@@ -255,7 +294,7 @@
                         </tr>
                         <tr>
                           <td class="td-padding" align="center" style="font-family: 'Open Sans', sans-serif; color: #1d1d2c!important; font-size: 16px; line-height: 24px; padding-top: 0px; padding-left: 0px!important; padding-right: 0px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 0px 0px 0px 0px;">
-                            &copy; {year} Almoçaí
+                            &copy; {year  } Almoçaí
                           </td>
                         </tr>
                       </table>
