--- a/entrar/main.html
+++ b/entrar/main.html
@@ -63,7 +63,7 @@
 
         <div class="row">
           <div class="input-field col s12 m8 offset-m2 l8 offset-l2 xl6 offset-xl2">
-            <a href="recuperacao" class="esqueci-senha">
+            <a href="redefinir-senha/" class="esqueci-senha">
               Esqueci minha senha
             </a>
           </div>
