--- a/entrar/nova-senha/main.html
+++ b/entrar/nova-senha/main.html
@@ -1,8 +1,8 @@
 <div class="section banner banner--15 valign-wrapper">
 	<div class="row">
 		<div class="col s12">
-			<h1 class="banner__titulo">Redefinição</h1>
-			<h4 class="banner__subtitulo">de senha</h4>
+			<h1 class="banner__titulo">Redefinir</h1>
+			<h4 class="banner__subtitulo">senha</h4>
 		</div>
 	</div>
 </div>
