--- a/entrar/redefinir-senha/main.html
+++ b/entrar/redefinir-senha/main.html
@@ -1,8 +1,8 @@
 <div class="section banner banner--14 valign-wrapper">
   <div class="row">
     <div class="col s12">
-      <h1 class="banner__titulo">Recuperação</h1>
-      <h4 class="banner__subtitulo">de senha</h4>
+      <h1 class="banner__titulo">Redefinir</h1>
+      <h4 class="banner__subtitulo">senha</h4>
     </div>
   </div>
 </div>
@@ -27,12 +27,12 @@
 					<div class="col s12 input-field center">
 						<button type="submit" class="btn almocai waves-effect waves-light bold acessar-interface-btn">
 							<i class="material-icons right">send</i>
-							Recuperar senha
+							Redefinir senha
 						</button>
 					</div>
 				</div>
 			</form>
-			<p>Se você não informou o seu email em seu perfil ao acessar o sistema, entre em contato com Coordenação Geral de Ensino.</p>
+			<p>Se você não informou o seu email em seu perfil ao acessar o sistema, entre em contato com a Coordenação Geral de Ensino.</p>
 
 		</div>
 	</div>
