--- a/entrar/redefinir-senha/msg_email_enviado.html
+++ b/entrar/redefinir-senha/msg_email_enviado.html
@@ -2,9 +2,8 @@
 	<div class="col s12 m6 offset-m3">
 		<div class="card-panel almocai almocai-text text-branco">
 			<p style="font-size: 1.25rem;">
-				Enviamos o link de recuperação de senha para o seu e-mail.
+				Enviamos um link em seu e-mail para redefinir sua senha. Caso não apareça em sua caixa de entrada, verifique na aba spam.
 			</p>
-
 			<p class="right-align">
 				<a href="./" class="perfil__dismiss bold">OK</a>
 			</p>
