--- a/entrar/redefinir-senha/msg_email_invalido.html
+++ b/entrar/redefinir-senha/msg_email_invalido.html
@@ -5,7 +5,7 @@
 				{errorMessage}
 			</p>
 			<p class="right-align">
-				<a href="../" class="perfil__dismiss bold">OK</a>
+				<a href="./" class="perfil__dismiss bold">OK</a>
 			</p>
 		</div>
 	</div>
