--- a/entrar/redefinir-senha/modelo-mensagem.html
+++ b/entrar/redefinir-senha/modelo-mensagem.html
@@ -175,7 +175,7 @@
                             <table width="600" cellpadding="0" cellspacing="0" border="0" class="container">
                               <!-- START BODY COPY -->
                               <tr>
-                                <td class="td-padding" align="center" style="font-family: 'Open Sans', sans-serif; color: #1d1d2c!important; font-size: 24px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px;">
+                                <td class="td-padding" align="center" style="font-family: 'Open Sans', sans-serif; color: #1d1d2c!important; font-size: 24px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px; font-weight: bold;">
                                       Almoçaí
                                 </td>
                               </tr>
