Created .htaccess and sitemap.xml

--- a/administrador/componentes/adicionar_usuario.html
+++ b/administrador/componentes/adicionar_usuario.html
@@ -16,7 +16,7 @@
         <div class="input-field col s12 m8 ">
           <input id="username" type="text" name="username" maxlength="100" required placeholder="Ex: fulano.silva" />
           <label for="username">Nome de usuário</label>
-          <span class="helper-text" data-error="Username já em uso" data-success=""></span>
+          <span class="helper-text" data-error="Este nome de usuário já está em uso" data-success=""></span>
         </div>
         
         <div class="input-field col s12 m4 adm__inserir--remove-margin">
