--- a/aluno/perfil/cartao_intolerancia_item.html
+++ b/aluno/perfil/cartao_intolerancia_item.html
@@ -28,7 +28,7 @@
 						href="{doc_path}" 
 						style="margin-left: 1rem"
 						class="btn almocai waves-effect waves-light bold acessar-interface-btn" 
-						download>
+						download="{username}-{nome}-{descricao}.pdf">
 						Baixar
 						<i class="material-icons right">
 							cloud_download
