--- a/funcionario/intolerancias-alunos/intolerancia.html
+++ b/funcionario/intolerancias-alunos/intolerancia.html
@@ -3,7 +3,7 @@
 	<td>{aluno_nome} ({username})</td>
 	<td>{intolerancia}</td>
 	<td>
-		<a href="{doc_path}" download class="btn almocai azul waves-light waves-effect bold acessar-interface-btn">
+		<a href="{doc_path}" download="{username}-{aluno_nome}-{intolerancia}.pdf" class="btn almocai azul waves-light waves-effect bold acessar-interface-btn">
 			Baixar
 			<i class="material-icons right">cloud_download</i>
 		</a>
