--- a/entrar/redefinir-senha/modelo-mensagem.html
+++ b/entrar/redefinir-senha/modelo-mensagem.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" lang="pt-br">
   <head>
+
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <!-- [ if !mso]> <!-->
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
@@ -294,7 +295,7 @@
                         </tr>
                         <tr>
                           <td class="td-padding" align="center" style="font-family: 'Open Sans', sans-serif; color: #1d1d2c!important; font-size: 16px; line-height: 24px; padding-top: 0px; padding-left: 0px!important; padding-right: 0px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 0px 0px 0px 0px;">
-                            &copy; {year  } Almoçaí
+                            &copy; {year} Almoçaí
                           </td>
                         </tr>
                       </table>
