--- a/template.html
+++ b/template.html
@@ -65,7 +65,7 @@
 <body>
 
   <div id="spinner-container">
-    <svg id="spinner" width="5vw" height="5vw" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+    <svg id="spinner" width="15vh" height="15vh" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
     <circle id="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
     </svg>
   </div>
